--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,6 @@
     <body>
         <p>hello</p>
         
-        <script src="./app.js" async defer></script>
+        <script src="./app.js" async></script>
     </body>
 </html>
