add: onHover effects CSS

--- a/src/index.html
+++ b/src/index.html
@@ -206,6 +206,7 @@
           type="text"
           class="email"
           placeholder="Enter your emaill address"
+          required
         />
         <button class="btn contact-btn">Contact Us</button>
       </section>
